course team card alignment and height issues

--- a/themes/custom/athena/assets/styles/modules/_courseTeamCard.scss
+++ b/themes/custom/athena/assets/styles/modules/_courseTeamCard.scss
@@ -90,10 +90,10 @@
         color: $secondaryColor;
         text-align: center; 
         margin-top:20px;
-        max-height: 140px;
+        max-height: 160px;
         text-overflow: ellipsis;
         overflow: hidden;
-        -webkit-line-clamp: 5;
+        -webkit-line-clamp: 6;
         -webkit-box-orient: vertical;
         display: -webkit-box;
     }
